--- a/tools/cfgs/kitti_models/second_ct3d_3cat.yaml
+++ b/tools/cfgs/kitti_models/second_ct3d_3cat.yaml
@@ -7,7 +7,7 @@ DATA_CONFIG:
     DISABLE_AUG_LIST: ['placeholder']
     AUG_CONFIG_LIST:
       - NAME: gt_sampling
-        USE_ROAD_PLANE: true
+        USE_ROAD_PLANE: false
         DB_INFO_PATH:
           - kitti_dbinfos_train.pkl
         PREPARE:
