fix: server requires root to mount

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,23 +14,26 @@ RUN micromamba install -y --name base --channel pyg --channel pytorch --channel 
 	cudatoolkit=11.3 numpy python=3.8 pytorch pytorch-scatter &&\
 	micromamba clean -y --all
 
-ARG MAMBA_DOCKERFILE_ACTIVATE=1
+USER root
 RUN --mount=target=/tmp/context,source=. \
 	install -m755 /tmp/context/start.sh ~ &&\
-	chmod a+rwx,g-rwx,o-rwx ~ &&\
-	micromamba install -y --channel conda-forge gdown openssh tmux unzip &&\
-	ssh-keygen -N "" -t ed25519 -f /opt/conda/etc/ssh_host_ed25519_key &&\
+	apt-get update &&\
+	apt-get install -y --no-install-recommends openssh-server &&\
+	rm -rf /var/lib/apt/lists/* &&\
+	micromamba install -y --name base --channel conda-forge gdown tmux unzip &&\
 	micromamba shell init --shell=bash --prefix=$MAMBA_ROOT_PREFIX &&\
 	micromamba clean -y --all
 
+ARG MAMBA_DOCKERFILE_ACTIVATE=1
 RUN --mount=target=/tmp/builder,source=/workspace,from=builder \
 	cp -r /tmp/builder/Thesis2022 ~ &&\
 	micromamba install -y --channel conda-forge \
-	fire lark pip portalocker pybind11 requests \
+	fire kornia lark pip portalocker pybind11 requests \
 	easydict numba scikit-image sharedarray tensorboardx tqdm &&\
+	pip install --no-cache-dir --upgrade spconv-cu113 &&\
 	echo "$HOME/Thesis2022" > $MAMBA_ROOT_PREFIX/lib/python3.8/site-packages/easy-install.pth &&\
 	printf "$HOME/Thesis2022\n." > $MAMBA_ROOT_PREFIX/lib/python3.8/site-packages/pcdet.egg-link &&\
 	micromamba clean -y --all
 
-WORKDIR /home/$MAMBA_USER/Thesis2022/tools
+WORKDIR /root/Thesis2022/tools
 CMD ["~/start.sh"]
