--- a/tools/config/kitti/main.yaml
+++ b/tools/config/kitti/main.yaml
@@ -1,69 +1,81 @@
 ---
 defaults:
-  - model: ???
   - _self_
+  - model: ???
+  - optional data_process: ${model}
+  - override hydra/launcher: torchrun
+hydra:
+  mode: MULTIRUN
+
+pc_range: [0, -40, -3, 70.4, 40, 1]
+voxel_size: [0.05, 0.05, 0.1]
+class_names: [Car, Pedestrian, Cyclist]
 
 dataset:
-  _target_: KittiDataset
-  DATA_PATH: ../data/kitti
+  _target_: pcdet.datasets.KittiDataset
+  path: ../data/kitti
+  class_names: ${class_names}
+  info_paths: [kitti_infos_val.pkl, kitti_infos_train.pkl]
+  item_names: [points]
+  fov_points_only: true
+  augmentor_cfg:
+    - name: gt_sampling
+      path: ${dataset.path}
+      use_road_plane: false
+      db_info_name: kitti_dbinfos_train.pkl
+      prepare:
+        filter_by_min_points: ['Car:5', 'Pedestrian:5', 'Cyclist:5']
+        filter_by_difficulty: [-1]
+      sample_groups: ['Car:20', 'Pedestrian:15', 'Cyclist:15']
+      num_point_features: 4
+      database_with_fakelidar: false
+      remove_extra_width: [0.0, 0.0, 0.0]
+      limit_whole_scene: true
 
-  POINT_CLOUD_RANGE: [0, -40, -3, 70.4, 40, 1]
+    - name: random_world_flip
+      along_axis_list: [x]
 
-  DATA_SPLIT:
-    train: train
-    test: val
+    - name: random_world_rotation
+      world_rot_angle: [-0.78539816, 0.78539816]
 
-  INFO_PATH:
-    train: [kitti_infos_train.pkl]
-    test: [kitti_infos_val.pkl]
-
-  GET_ITEM_LIST: [points]
-  FOV_POINTS_ONLY: true
-
-  DATA_AUGMENTOR:
-    DISABLE_AUG_LIST: [placeholder]
-    AUG_CONFIG_LIST:
-      - NAME: gt_sampling
-        USE_ROAD_PLANE: false
-        DB_INFO_PATH: [kitti_dbinfos_train.pkl]
-        PREPARE:
-          filter_by_min_points: ['Car:5', 'Pedestrian:5', 'Cyclist:5']
-          filter_by_difficulty: [-1]
-
-        SAMPLE_GROUPS: ['Car:20', 'Pedestrian:15', 'Cyclist:15']
-        NUM_POINT_FEATURES: 4
-        DATABASE_WITH_FAKELIDAR: false
-        REMOVE_EXTRA_WIDTH: [0.0, 0.0, 0.0]
-        LIMIT_WHOLE_SCENE: true
-
-      - NAME: random_world_flip
-        ALONG_AXIS_LIST: [x]
-
-      - NAME: random_world_rotation
-        WORLD_ROT_ANGLE: [-0.78539816, 0.78539816]
-
-      - NAME: random_world_scaling
-        WORLD_SCALE_RANGE: [0.95, 1.05]
-
-
-  POINT_FEATURE_ENCODING:
-    encoding_type: absolute_coordinates_encoding
+    - name: random_world_scaling
+      world_scale_range: [0.95, 1.05]
+  pfe:
+    _target_: pcdet.datasets.processor.PointFeatureEncoder
+    name: absolute_coordinates_encoding
     used_feature_list: [x, y, z, intensity]
     src_feature_list: [x, y, z, intensity]
+  processor_cfg:
+    pc_range: ${pc_range}
+    num_point_features: ${len:${..pfe.used_feature_list}}
+    processor_list:
+      # [test val, train val]
+      - name: mask_points_and_boxes_outside_range
+        remove_outside_boxes: true
+      - name: shuffle_points
+        shuffle_enabled: [false, true]
+      - name: transform_points_to_voxels
+        voxel_size: ${voxel_size}
+        max_points_per_voxel: 5
+        max_number_of_voxels: [40000, 16000]
 
+log_dir: ${hydra:sweep.dir}
+num_workers: 2
+optional test: ???
+optim:
+  _target_: torch.optim.RAdam
+scheduler:
+  max_lr: 0.01
+grad_max_norm: 10.0
 
-  DATA_PROCESSOR:
-    - NAME: mask_points_and_boxes_outside_range
-      REMOVE_OUTSIDE_BOXES: true
+MOMS: [0.95, 0.85]
+PCT_START: 0.4
+DIV_FACTOR: 10
+DECAY_STEP_LIST: [35, 45]
+LR_DECAY: 0.1
+LR_CLIP: 0.0000001
 
-    - NAME: shuffle_points
-      SHUFFLE_ENABLED:
-        train: true
-        test: false
+LR_WARMUP: false
+WARMUP_EPOCH: 1
 
-    - NAME: transform_points_to_voxels
-      VOXEL_SIZE: [0.05, 0.05, 0.1]
-      MAX_POINTS_PER_VOXEL: 5
-      MAX_NUMBER_OF_VOXELS:
-        train: 16000
-        test: 40000
+GRAD_NORM_CLIP: 10
