--- a/tools/config/kitti/model/voxel_rcnn_car.yaml
+++ b/tools/config/kitti/model/voxel_rcnn_car.yaml
@@ -1,197 +1,133 @@
 ---
-CLASS_NAMES: ['Car']
-
-DATA_CONFIG:
-  _BASE_CONFIG_: cfgs/dataset_configs/kitti_dataset.yaml
-  DATA_AUGMENTOR:
-    DISABLE_AUG_LIST: ['placeholder']
-    AUG_CONFIG_LIST:
-      - NAME: gt_sampling
-        USE_ROAD_PLANE: false
-        DB_INFO_PATH:
-          - kitti_dbinfos_train.pkl
-        PREPARE:
-          filter_by_min_points: ['Car:5']
-          filter_by_difficulty: [-1]
-
-        SAMPLE_GROUPS: ['Car:15']
-        NUM_POINT_FEATURES: 4
-        DATABASE_WITH_FAKELIDAR: false
-        REMOVE_EXTRA_WIDTH: [0.0, 0.0, 0.0]
-        LIMIT_WHOLE_SCENE: false
-
-      - NAME: random_world_flip
-        ALONG_AXIS_LIST: ['x']
-
-      - NAME: random_world_rotation
-        WORLD_ROT_ANGLE: [-0.78539816, 0.78539816]
-
-      - NAME: random_world_scaling
-        WORLD_SCALE_RANGE: [0.95, 1.05]
-
-MODEL:
-  NAME: VoxelRCNN
-
-  VFE:
-    NAME: MeanVFE
-
-  BACKBONE_3D:
-    NAME: VoxelBackBone8x
-
-  MAP_TO_BEV:
-    NAME: HeightCompression
-    NUM_BEV_FEATURES: 256
-
-  BACKBONE_2D:
-    NAME: BaseBEVBackbone
-
-    LAYER_NUMS: [5, 5]
-    LAYER_STRIDES: [1, 2]
-    NUM_FILTERS: [64, 128]
-    UPSAMPLE_STRIDES: [1, 2]
-    NUM_UPSAMPLE_FILTERS: [128, 128]
-
-  DENSE_HEAD:
-    NAME: AnchorHeadSingle
-    CLASS_AGNOSTIC: false
-
-    USE_DIRECTION_CLASSIFIER: true
-    DIR_OFFSET: 0.78539
-    DIR_LIMIT_OFFSET: 0.0
-    NUM_DIR_BINS: 2
-    ANCHOR_GENERATOR_CONFIG:
-      - class_name: Car
-        anchor_sizes: [[3.9, 1.6, 1.56]]
-        anchor_rotations: [0, 1.57]
-        anchor_bottom_heights: [-1.78]
-        align_center: false
-        feature_map_stride: 8
-        matched_threshold: 0.6
-        unmatched_threshold: 0.45
-
-    TARGET_ASSIGNER_CONFIG:
-      NAME: AxisAlignedTargetAssigner
-      POS_FRACTION: -1.0
-      SAMPLE_SIZE: 512
-      NORM_BY_NUM_EXAMPLES: false
-      MATCH_HEIGHT: false
-      BOX_CODER: ResidualCoder
-
-    LOSS_CONFIG:
-      LOSS_WEIGHTS:
-        cls_weight: 1
-        loc_weight: 2
-        dir_weight: 0.2
-        code_weights: [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
-
-  ROI_HEAD:
-    NAME: VoxelRCNNHead
-    CLASS_AGNOSTIC: true
-
-    SHARED_FC: [256, 256]
-    CLS_FC: [256, 256]
-    REG_FC: [256, 256]
-    DP_RATIO: 0.3
-
-    NMS_CONFIG:
-      TRAIN:
-        NMS_TYPE: nms_gpu
-        MULTI_CLASSES_NMS: false
-        NMS_PRE_MAXSIZE: 9000
-        NMS_POST_MAXSIZE: 512
-        NMS_THRESH: 0.8
-      TEST:
-        NMS_TYPE: nms_gpu
-        MULTI_CLASSES_NMS: false
-        USE_FAST_NMS: false
-        SCORE_THRESH: 0.0
-        NMS_PRE_MAXSIZE: 2048
-        NMS_POST_MAXSIZE: 100
-        NMS_THRESH: 0.7
-
-    ROI_GRID_POOL:
-      FEATURES_SOURCE: ['x_conv2', 'x_conv3', 'x_conv4']
-      PRE_MLP: true
-      GRID_SIZE: 6
-      POOL_LAYERS:
-        x_conv2:
-          MLPS: [[32, 32]]
-          QUERY_RANGES: [[4, 4, 4]]
-          POOL_RADIUS: [0.4]
-          NSAMPLE: [16]
-          POOL_METHOD: max_pool
-        x_conv3:
-          MLPS: [[32, 32]]
-          QUERY_RANGES: [[4, 4, 4]]
-          POOL_RADIUS: [0.8]
-          NSAMPLE: [16]
-          POOL_METHOD: max_pool
-        x_conv4:
-          MLPS: [[32, 32]]
-          QUERY_RANGES: [[4, 4, 4]]
-          POOL_RADIUS: [1.6]
-          NSAMPLE: [16]
-          POOL_METHOD: max_pool
-
-    TARGET_CONFIG:
-      BOX_CODER: ResidualCoder
-      ROI_PER_IMAGE: 128
-      FG_RATIO: 0.5
-
-      SAMPLE_ROI_BY_EACH_CLASS: true
-      CLS_SCORE_TYPE: roi_iou
-
-      CLS_FG_THRESH: 0.75
-      CLS_BG_THRESH: 0.25
-      CLS_BG_THRESH_LO: 0.1
-      HARD_BG_RATIO: 0.8
-
-      REG_FG_THRESH: 0.55
-
-    LOSS_CONFIG:
-      CLS_LOSS: BinaryCrossEntropy
-      REG_LOSS: smooth-l1
-      CORNER_LOSS_REGULARIZATION: true
-      GRID_3D_IOU_LOSS: false
-      LOSS_WEIGHTS:
-        rcnn_cls_weight: 1.0
-        rcnn_reg_weight: 1.0
-        rcnn_corner_weight: 1.0
-        rcnn_iou3d_weight: 1.0
-        code_weights: [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
-
-  POST_PROCESSING:
-    RECALL_THRESH_LIST: [0.3, 0.5, 0.7]
-    SCORE_THRESH: 0.3
-    OUTPUT_RAW_SCORE: false
-
-    EVAL_METRIC: kitti
-
-    NMS_CONFIG:
-      MULTI_CLASSES_NMS: false
-      NMS_TYPE: nms_gpu
-      NMS_THRESH: 0.1
-      NMS_PRE_MAXSIZE: 4096
-      NMS_POST_MAXSIZE: 500
-
-
-OPTIMIZATION:
-  BATCH_SIZE_PER_GPU: 2
-  NUM_EPOCHS: 80
-
-  OPTIMIZER: adam_onecycle
-  LR: 0.01
-  WEIGHT_DECAY: 0.01
-  MOMENTUM: 0.9
-
-  MOMS: [0.95, 0.85]
-  PCT_START: 0.4
-  DIV_FACTOR: 10
-  DECAY_STEP_LIST: [35, 45]
-  LR_DECAY: 0.1
-  LR_CLIP: 0.0000001
-
-  LR_WARMUP: false
-  WARMUP_EPOCH: 1
-
-  GRAD_NORM_CLIP: 10
+_target_: pcdet.models.VoxelRCNN
+vfe:
+  _target_: pcdet.models.backbones_3d.vfe.MeanVFE
+backbone_3d:
+  _target_: pcdet.models.backbones_3d.VoxelBackbone8x
+  in_channels: ${len:${dataset.pfe.used_feature_list}}
+  grid_size: ${get_grid_size:${pc_range},${voxel_size}}
+map_to_bev:
+  _target_: pcdet.models.backbones_2d.map_to_bev.HeightCompression
+backbone_2d:
+  _target_: pcdet.models.backbones_2d.BaseBEVBackbone
+  in_channels: 256
+  layer_nums: [5, 5]
+  layer_strides: [1, 2]
+  num_filters: [64, 128]
+  upsample_strides: [1, 2]
+  num_upsample_filters: [128, 128]
+dense_head:
+  _target_: pcdet.models.dense_heads.AnchorHeadSingle
+  in_channels: ${..backbone_2d.in_channels}
+  dir_offset: 0.78539
+  dir_limit_offset: 0.0
+  loss_weights:
+    classification: 1.0
+    direction: 0.2
+    location: 2.0
+  num_class: ${len:${class_names}}
+  num_dir_bins: 2
+  box_coder:
+    _target_: pcdet.utils.box_coder_utils.ResidualCoder
+  target_assigner_partial:
+    _partial_: true
+    _target_: pcdet.models.dense_heads.target_assigner.AxisAlignedTargetAssigner
+    anchor_cfgs: ${..anchor_cfgs}
+    class_names: ${class_names}
+    match_height: false
+    norm_by_num_examples: false
+    pos_fraction: -1.0
+    sample_size: 512
+  anchor_range: ${pc_range}
+  anchor_cfgs:
+    - class_name: Car
+      anchor_sizes: [[3.9, 1.6, 1.56]]
+      anchor_rotations: [0, 1.57]
+      anchor_bottom_heights: [-1.78]
+      align_center: false
+      feature_map_stride: 8
+      matched_threshold: 0.6
+      unmatched_threshold: 0.45
+  use_direction_classifier: true
+  predict_boxes_when_training: true
+  grid_size: ${model.backbone_3d.grid_size}
+  reg_loss:
+    _target_: pcdet.utils.loss_utils.WeightedSmoothL1Loss
+    code_weights: [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
+roi_head:
+  _target_: pcdet.models.roi_heads.VoxelRCNNHead
+  dp_ratio: 0.3
+  num_class: 1
+  cls_channels: [256, 256]
+  reg_channels: [256, 256]
+  shared_channels: [256, 256]
+  pc_range: ${pc_range}
+  voxel_size: ${voxel_size}
+  nms_train_cfg:
+    name: nms_gpu
+    multi_classes_nms: false
+    pre_maxsize: 9000
+    post_maxsize: 512
+    threshold: 0.8
+    score_thresh: null  # TODO not necessary
+  nms_test_cfg:
+    nms_type: nms_gpu
+    multi_classes_nms: false
+    pre_maxsize: 2048
+    post_maxsize: 100
+    threshold: 0.7
+    score_thresh: 0.0
+  pool_cfgs:
+    # TODO: restore 3D backbone dims in code, not in configs
+    - name: x_conv2
+      method: max_pool
+      mlps: [[32, 32, 32]]
+      radius: [0.4]
+      ranges: [[4, 4, 4]]
+      nsample: [16]
+    - name: x_conv3
+      method: max_pool
+      mlps: [[64, 32, 32]]
+      ranges: [[4, 4, 4]]
+      radius: [0.8]
+      nsample: [16]
+    - name: x_conv4
+      method: max_pool
+      mlps: [[64, 32, 32]]
+      ranges: [[4, 4, 4]]
+      radius: [1.6]
+      nsample: [16]
+  pool_grid_size: 6
+  box_coder:
+    _target_: pcdet.utils.box_coder_utils.ResidualCoder
+  proposal_target_layer:
+    _target_: pcdet.models.roi_heads.target_assigner.ProposalTargetLayer
+    cls_score_type: ROI_IOU
+    cls_bg_thresh: 0.25
+    cls_bg_thresh_lo: 0.1
+    cls_fg_thresh: 0.75
+    fg_ratio: 0.5
+    hard_bg_ratio: 0.8
+    reg_fg_thresh: 0.55
+    roi_per_image: 128
+    sample_roi_by_each_class: true
+  corner_loss_regularization: true
+  classification_loss_fn:
+    _target_: torch.nn.BCELoss
+    reduction: none
+  reg_loss_fn:
+    _target_: pcdet.utils.loss_utils.WeightedSmoothL1Loss
+    code_weights: [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
+  loss_weights:
+    rcnn_classification: 1.0
+    rcnn_regression: 1.0
+    rcnn_corner: 1.0
+output_raw_score: false
+nms_cfgs:
+  name: nms_gpu
+  multi_classes_nms: false
+  pre_maxsize: 4096
+  post_maxsize: 500
+  threshold: 0.1
+  score_thresh: 0.3
+recall_thresholds: [0.3, 0.5, 0.7]
