refactor: voxel_rcnn_trans

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM pytorch/pytorch:1.11.0-cuda11.3-cudnn8-devel as builder
 
 ARG CUDA_ARCH
 RUN conda install -y --channel conda-forge git ninja pip setuptools &&\
-	git clone https://github.com/ncakhoa/Thesis2022.git &&\
+	git clone --single-branch --branch hydra_config https://github.com/ncakhoa/Thesis2022.git &&\
 	TORCH_CUDA_ARCH_LIST=$CUDA_ARCH pip install \
 	--no-build-isolation --no-cache-dir --no-deps --upgrade --editable ./Thesis2022 &&\
 	rm -rf Thesis2022/build &&\
@@ -10,8 +10,11 @@ RUN conda install -y --channel conda-forge git ninja pip setuptools &&\
 
 FROM mambaorg/micromamba:latest
 
-RUN micromamba install -y --name base --channel pyg --channel pytorch --channel conda-forge \
-	cudatoolkit=11.3 numpy python=3.8 pytorch pytorch-scatter &&\
+RUN micromamba install -y --name base --channel pytorch --channel conda-forge \
+	cudatoolkit=11.3 numpy pillow python=3.8 pytorch &&\
+	micromamba install -y --name base --channel conda-forge \
+	fire kornia lark pip portalocker pybind11 \
+	numba scipy sharedarray tensorboard tqdm &&\
 	micromamba clean -y --all
 
 USER root
@@ -27,10 +30,9 @@ RUN --mount=target=/tmp/context,source=. \
 ARG MAMBA_DOCKERFILE_ACTIVATE=1
 RUN --mount=target=/tmp/builder,source=/workspace,from=builder \
 	cp -r /tmp/builder/Thesis2022 ~ &&\
-	micromamba install -y --channel conda-forge \
-	fire kornia lark pip portalocker pybind11 requests \
-	easydict numba scikit-image sharedarray tensorboardx tqdm &&\
-	pip install --no-cache-dir --upgrade spconv-cu113 &&\
+	git clone --depth 1 https://github.com/facebookresearch/hydra &&\
+	pip install --no-cache-dir --upgrade \
+	hydra-core ./hydra/examples/patterns/specializing_config spconv-cu113 &&\
 	echo "$HOME/Thesis2022" > $MAMBA_ROOT_PREFIX/lib/python3.8/site-packages/easy-install.pth &&\
 	printf "$HOME/Thesis2022\n." > $MAMBA_ROOT_PREFIX/lib/python3.8/site-packages/pcdet.egg-link &&\
 	micromamba clean -y --all
