feat: test script (has ERROR)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ RUN conda install -y --channel conda-forge git ninja pip setuptools &&\
 	git clone https://github.com/ncakhoa/Thesis2022.git &&\
 	TORCH_CUDA_ARCH_LIST=$CUDA_ARCH pip install \
 	--no-build-isolation --no-cache-dir --no-deps --upgrade --editable ./Thesis2022 &&\
-	rm -rf Thesis2022/build &&\
+	rm -rf ./Thesis2022/build &&\
 	conda clean -y --all
 
 FROM mambaorg/micromamba:latest
@@ -17,29 +17,27 @@ RUN micromamba install -y --name base --channel pytorch --channel conda-forge \
 	numba scipy sharedarray tensorboard tqdm &&\
 	micromamba clean -y --all
 
+RUN micromamba install -y --name base --channel conda-forge \
+	curl gdown git rclone tmux unzip vim &&\
+	micromamba shell init --shell=bash --prefix=$MAMBA_ROOT_PREFIX &&\
+	micromamba clean -y --all
+
 USER root
 RUN --mount=target=/tmp/context,source=. \
 	install -m755 /tmp/context/start.sh ~ &&\
 	apt-get update &&\
 	apt-get install -y --no-install-recommends openssh-server &&\
-	rm -rf /var/lib/apt/lists/* &&\
-	micromamba install -y --name base --channel conda-forge \
-	curl gdown tmux unzip vim &&\
-	sed -i 's#/usr/lib/openssh/sftp-server#internal-sftp#g' /etc/ssh/sshd_config &&\
-	micromamba shell init --shell=bash --prefix=$MAMBA_ROOT_PREFIX &&\
-	micromamba clean -y --all
+	rm -rf /var/lib/apt/lists/*
 
 ARG MAMBA_DOCKERFILE_ACTIVATE=1
 RUN --mount=target=/tmp/builder,source=/workspace,from=builder \
 	cp -r /tmp/builder/Thesis2022 ~ &&\
-	micromamba install -y --channel conda-forge git &&\
+	echo "$HOME/Thesis2022" > $MAMBA_ROOT_PREFIX/lib/python3.8/site-packages/easy-install.pth &&\
+	printf "$HOME/Thesis2022\n." > $MAMBA_ROOT_PREFIX/lib/python3.8/site-packages/pcdet.egg-link &&\
 	git clone --depth 1 https://github.com/facebookresearch/hydra &&\
 	pip install --no-cache-dir --upgrade \
 	hydra-core ./hydra/contrib/hydra_torchrun_launcher spconv-cu113 &&\
-	echo "$HOME/Thesis2022" > $MAMBA_ROOT_PREFIX/lib/python3.8/site-packages/easy-install.pth &&\
-	printf "$HOME/Thesis2022\n." > $MAMBA_ROOT_PREFIX/lib/python3.8/site-packages/pcdet.egg-link &&\
-	micromamba remove -y git &&\
-	micromamba clean -y --all
+	rm -rf ./hydra
 
 WORKDIR /root/Thesis2022/tools
 CMD ["~/start.sh"]
