--- a/tools/cfgs/dataset_configs/kitti_dataset.yaml
+++ b/tools/cfgs/dataset_configs/kitti_dataset.yaml
@@ -1,27 +1,26 @@
 ---
-DATASET: 'KittiDataset'
-DATA_PATH: '../data/kitti'
+DATASET: KittiDataset
+DATA_PATH: ../data/kitti
 
 POINT_CLOUD_RANGE: [0, -40, -3, 70.4, 40, 1]
 
 DATA_SPLIT:
-  'train': train
-  'test': val
+  train: train
+  test: val
 
 INFO_PATH:
-  'train': [kitti_infos_train.pkl]
-  'test': [kitti_infos_val.pkl]
+  train: [kitti_infos_train.pkl]
+  test: [kitti_infos_val.pkl]
 
-GET_ITEM_LIST: ["points"]
+GET_ITEM_LIST: [points]
 FOV_POINTS_ONLY: true
 
 DATA_AUGMENTOR:
-  DISABLE_AUG_LIST: ['placeholder']
+  DISABLE_AUG_LIST: [placeholder]
   AUG_CONFIG_LIST:
     - NAME: gt_sampling
       USE_ROAD_PLANE: false
-      DB_INFO_PATH:
-        - kitti_dbinfos_train.pkl
+      DB_INFO_PATH: [kitti_dbinfos_train.pkl]
       PREPARE:
         filter_by_min_points: ['Car:5', 'Pedestrian:5', 'Cyclist:5']
         filter_by_difficulty: [-1]
@@ -33,7 +32,7 @@ DATA_AUGMENTOR:
       LIMIT_WHOLE_SCENE: true
 
     - NAME: random_world_flip
-      ALONG_AXIS_LIST: ['x']
+      ALONG_AXIS_LIST: [x]
 
     - NAME: random_world_rotation
       WORLD_ROT_ANGLE: [-0.78539816, 0.78539816]
@@ -54,12 +53,12 @@ DATA_PROCESSOR:
 
   - NAME: shuffle_points
     SHUFFLE_ENABLED:
-      'train': true
-      'test': false
+      train: true
+      test: false
 
   - NAME: transform_points_to_voxels
     VOXEL_SIZE: [0.05, 0.05, 0.1]
     MAX_POINTS_PER_VOXEL: 5
     MAX_NUMBER_OF_VOXELS:
-      'train': 16000
-      'test': 40000
+      train: 16000
+      test: 40000
