--- a/tools/cfgs/kitti_models/voxel_rcnn_trans.yaml
+++ b/tools/cfgs/kitti_models/voxel_rcnn_trans.yaml
@@ -1,15 +1,14 @@
 ---
-CLASS_NAMES: ['Car']
+CLASS_NAMES: [Car]
 
 DATA_CONFIG:
   _BASE_CONFIG_: cfgs/dataset_configs/kitti_dataset.yaml
   DATA_AUGMENTOR:
-    DISABLE_AUG_LIST: ['placeholder']
+    DISABLE_AUG_LIST: [placeholder]
     AUG_CONFIG_LIST:
       - NAME: gt_sampling
         USE_ROAD_PLANE: false
-        DB_INFO_PATH:
-          - kitti_dbinfos_train.pkl
+        DB_INFO_PATH: [kitti_dbinfos_train.pkl]
         PREPARE:
           filter_by_min_points: ['Car:5']
           filter_by_difficulty: [-1]
@@ -21,7 +20,7 @@ DATA_CONFIG:
         LIMIT_WHOLE_SCENE: false
 
       - NAME: random_world_flip
-        ALONG_AXIS_LIST: ['x']
+        ALONG_AXIS_LIST: [x]
 
       - NAME: random_world_rotation
         WORLD_ROT_ANGLE: [-0.78539816, 0.78539816]
@@ -133,15 +132,15 @@ MODEL:
           NSAMPLE: [16]
           POOL_METHOD: max_pool
       ATTENTION:
-        NUM_FEATURES: 128
-        NUM_HEADS: 1
-        NUM_HIDDEN_FEATURES: 128
-        NUM_LAYERS: 1
+        NUM_FEATURES: 96
+        NUM_HEADS: 4
+        NUM_HIDDEN_FEATURES: 96
+        NUM_LAYERS: 2
         POSITIONAL_ENCODER: grid_points
         MAX_NUM_BOXES: 20
         DROPOUT: 0.1
         MASK_EMPTY_POINTS: True
-        
+
     TARGET_CONFIG:
       BOX_CODER: ResidualCoder
       ROI_PER_IMAGE: 128
