--- a/environment.yaml
+++ b/environment.yaml
@@ -7,7 +7,6 @@ dependencies:
   - cudatoolkit=11.3
   - cudatoolkit-dev=11.3
   - pip
-  - python=3.8
   - pytorch
   - wget
   # spconv requirements
@@ -29,23 +28,11 @@ dependencies:
   - autoflake
   - black
   - clang-tools
-  - cmake-format
   - cppcheck
   - debugpy
-  - flake8-bugbear
-  - flake8-builtins
-  - flake8-comprehensions
-  - flake8-isort
-  - flake8-logging-format
-  - flake8-mutable
-  - flake8-simplify
-  - flake8-typing-imports
-  - flake8-use-fstring
-  - flake8-use-pathlib
   - isort
-  - pep8-naming
+  - pylint
   - yamllint
   - pip:
       - open3d  # Visualize
-      - pyproject-flake8
       - spconv-cu113
