--- a/tools/cfgs/kitti_models/voxel_rcnn_car.yaml
+++ b/tools/cfgs/kitti_models/voxel_rcnn_car.yaml
@@ -1,15 +1,14 @@
 ---
-CLASS_NAMES: ['Car']
+CLASS_NAMES: [Car]
 
 DATA_CONFIG:
   _BASE_CONFIG_: cfgs/dataset_configs/kitti_dataset.yaml
   DATA_AUGMENTOR:
-    DISABLE_AUG_LIST: ['placeholder']
+    DISABLE_AUG_LIST: [placeholder]
     AUG_CONFIG_LIST:
       - NAME: gt_sampling
         USE_ROAD_PLANE: false
-        DB_INFO_PATH:
-          - kitti_dbinfos_train.pkl
+        DB_INFO_PATH: [kitti_dbinfos_train.pkl]
         PREPARE:
           filter_by_min_points: ['Car:5']
           filter_by_difficulty: [-1]
@@ -21,7 +20,7 @@ DATA_CONFIG:
         LIMIT_WHOLE_SCENE: false
 
       - NAME: random_world_flip
-        ALONG_AXIS_LIST: ['x']
+        ALONG_AXIS_LIST: [x]
 
       - NAME: random_world_rotation
         WORLD_ROT_ANGLE: [-0.78539816, 0.78539816]
@@ -110,7 +109,7 @@ MODEL:
         NMS_THRESH: 0.7
 
     ROI_GRID_POOL:
-      FEATURES_SOURCE: ['x_conv2', 'x_conv3', 'x_conv4']
+      FEATURES_SOURCE: [x_conv2, x_conv3, x_conv4]
       PRE_MLP: true
       GRID_SIZE: 6
       POOL_LAYERS:
