--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,8 @@ version = { attr = 'pcdet.__version__' }
 [tool.black]
 line-length = 100
 
-[tool.flake8]
-max-line-length = 100
+[tool.pylint.'MESSAGES CONTROL']
+disable = ['missing-docstring']
 
 [tool.isort]
 profile = 'black'
