--- a/tools/cfgs/kitti_models/second_voxel_rcnn_trans.yaml
+++ b/tools/cfgs/kitti_models/second_voxel_rcnn_trans.yaml
@@ -113,6 +113,7 @@ MODEL:
       NAME: VoxelRCNNHeadTrans
       CLASS_AGNOSTIC: True
 
+      SHARED_FC: [256, 256]
       CLS_FC: [256, 256]
       REG_FC: [256, 256]
       DP_RATIO: 0.3
