--- a/tools/cfgs/kitti_models/hopless_car.yaml
+++ b/tools/cfgs/kitti_models/hopless_car.yaml
@@ -88,6 +88,7 @@ MODEL:
     CLASS_AGNOSTIC: true
 
     NUM_POINTS: 256
+    ADD_DIS: 0.6
     SHARED_FC: [256, 256]
     CLS_FC: [256, 256]
     REG_FC: [256, 256]
@@ -112,16 +113,16 @@ MODEL:
     ROI_GRID_POOL:
       GRID_SIZE: 6
       NAME: StackSAModuleMSG
-      MLPS: [[64, 64], [64, 64]]
+      MLPS: [[128, 128], [128, 128]]
       POOL_RADIUS: [0.8, 1.6]
-      NSAMPLE: [16, 16]
+      NSAMPLE: [64, 64]
       POOL_METHOD: max_pool
 
     ATTENTION:
       ENABLED: True
-      NUM_FEATURES: 128
+      NUM_FEATURES: 256
       NUM_HEADS: 1
-      NUM_HIDDEN_FEATURES: 128
+      NUM_HIDDEN_FEATURES: 256
       NUM_LAYERS: 1
       POSITIONAL_ENCODER: density_grid_points
       # MAX_NUM_BOXES: 20
