--- a/tools/cfgs/kitti_models/mixed_head.yaml
+++ b/tools/cfgs/kitti_models/mixed_head.yaml
@@ -155,24 +155,20 @@ MODEL:
             NSAMPLE: [32]
             POOL_METHOD: max_pool
         POINT_POOL_LAYER:
+          NUM_POINTS: 256
+          ADD_DIS: 0.6
           NAME: StackSAModuleMSG
           MLPS: [[32, 32], [32, 32]]
           POOL_RADIUS: [0.4, 0.8]
           NSAMPLE: [32, 32]
-          SAMPLE_METHOD: SPC
-          SPC_SAMPLING:
-            SAMPLE_RADIUS_WITH_ROI: 1.6
-            NUM_POINTS_OF_EACH_SAMPLE_PART: 400
-            NUM_SECTORS: 6
-          NUM_KEYPOINTS: 3000
-        ATTENTION:
-          NUM_FEATURES: 256
-          NUM_HEADS: 4
-          NUM_HIDDEN_FEATURES: 256
-          NUM_LAYERS: 1
-          POSITIONAL_ENCODER: grid_points
-          DROPOUT: 0.1
-          MASK_EMPTY_POINTS: True
+    # ATTENTION:
+    #   NUM_FEATURES: 256
+    #   NUM_HEADS: 4
+    #   NUM_HIDDEN_FEATURES: 256
+    #   NUM_LAYERS: 1
+    #   POSITIONAL_ENCODER: grid_points
+    #   DROPOUT: 0.1
+    #   MASK_EMPTY_POINTS: True
 
       TARGET_CONFIG:
           BOX_CODER: ResidualCoder
