--- a/tools/cfgs/kitti_models/mixed_head.yaml
+++ b/tools/cfgs/kitti_models/mixed_head.yaml
@@ -1,113 +1,87 @@
-CLASS_NAMES: ['Car', 'Pedestrian', 'Cyclist']
+---
+CLASS_NAMES: [Car]
 
 DATA_CONFIG:
-    _BASE_CONFIG_: cfgs/dataset_configs/kitti_dataset.yaml
-    DATA_AUGMENTOR:
-        DISABLE_AUG_LIST: ['placeholder']
-        AUG_CONFIG_LIST:
-            - NAME: gt_sampling
-              USE_ROAD_PLANE: false
-              DB_INFO_PATH:
-                  - kitti_dbinfos_train.pkl
-              PREPARE: {
-                 filter_by_min_points: ['Car:5', 'Pedestrian:5', 'Cyclist:5'],
-                 filter_by_difficulty: [-1],
-              }
+  _BASE_CONFIG_: cfgs/dataset_configs/kitti_dataset.yaml
+  DATA_AUGMENTOR:
+    DISABLE_AUG_LIST: [placeholder]
+    AUG_CONFIG_LIST:
+      - NAME: gt_sampling
+        USE_ROAD_PLANE: false
+        DB_INFO_PATH: [kitti_dbinfos_train.pkl]
+        PREPARE:
+          filter_by_min_points: ['Car:5']
+          filter_by_difficulty: [-1]
 
-              SAMPLE_GROUPS: ['Car:15','Pedestrian:10', 'Cyclist:10']
-              NUM_POINT_FEATURES: 4
-              DATABASE_WITH_FAKELIDAR: False
-              REMOVE_EXTRA_WIDTH: [0.0, 0.0, 0.0]
-              LIMIT_WHOLE_SCENE: False
+        SAMPLE_GROUPS: ['Car:15']
+        NUM_POINT_FEATURES: 4
+        DATABASE_WITH_FAKELIDAR: false
+        REMOVE_EXTRA_WIDTH: [0.0, 0.0, 0.0]
+        LIMIT_WHOLE_SCENE: false
 
-            - NAME: random_world_flip
-              ALONG_AXIS_LIST: ['x']
+      - NAME: random_world_flip
+        ALONG_AXIS_LIST: [x]
 
-            - NAME: random_world_rotation
-              WORLD_ROT_ANGLE: [-0.78539816, 0.78539816]
+      - NAME: random_world_rotation
+        WORLD_ROT_ANGLE: [-0.78539816, 0.78539816]
 
-            - NAME: random_world_scaling
-              WORLD_SCALE_RANGE: [0.95, 1.05]
+      - NAME: random_world_scaling
+        WORLD_SCALE_RANGE: [0.95, 1.05]
 
 MODEL:
-    NAME: MixedHead
+  NAME: VoxelRCNN
 
-    VFE:
-        NAME: MeanVFE
+  VFE:
+    NAME: MeanVFE
 
-    BACKBONE_3D:
-        NAME: VoxelBackBone8x
+  BACKBONE_3D:
+    NAME: VoxelBackBone8x
 
-    MAP_TO_BEV:
-        NAME: HeightCompression
-        NUM_BEV_FEATURES: 256
+  MAP_TO_BEV:
+    NAME: HeightCompression
+    NUM_BEV_FEATURES: 256
 
-    BACKBONE_2D:
-        NAME: BaseBEVBackbone
+  BACKBONE_2D:
+    NAME: BaseBEVBackbone
 
-        LAYER_NUMS: [5, 5]
-        LAYER_STRIDES: [1, 2]
-        NUM_FILTERS: [128, 256]
-        UPSAMPLE_STRIDES: [1, 2]
-        NUM_UPSAMPLE_FILTERS: [256, 256]
+    LAYER_NUMS: [5, 5]
+    LAYER_STRIDES: [1, 2]
+    NUM_FILTERS: [64, 128]
+    UPSAMPLE_STRIDES: [1, 2]
+    NUM_UPSAMPLE_FILTERS: [128, 128]
 
-    DENSE_HEAD:
-        NAME: AnchorHeadSingle
-        CLASS_AGNOSTIC: False
+  DENSE_HEAD:
+    NAME: AnchorHeadSingle
+    CLASS_AGNOSTIC: false
 
-        USE_DIRECTION_CLASSIFIER: True
-        DIR_OFFSET: 0.78539
-        DIR_LIMIT_OFFSET: 0.0
-        NUM_DIR_BINS: 2
+    USE_DIRECTION_CLASSIFIER: true
+    DIR_OFFSET: 0.78539
+    DIR_LIMIT_OFFSET: 0.0
+    NUM_DIR_BINS: 2
+    ANCHOR_GENERATOR_CONFIG:
+      - class_name: Car
+        anchor_sizes: [[3.9, 1.6, 1.56]]
+        anchor_rotations: [0, 1.57]
+        anchor_bottom_heights: [-1.78]
+        align_center: false
+        feature_map_stride: 8
+        matched_threshold: 0.6
+        unmatched_threshold: 0.45
 
-        ANCHOR_GENERATOR_CONFIG: [
-            {
-                'class_name': 'Car',
-                'anchor_sizes': [[3.9, 1.6, 1.56]],
-                'anchor_rotations': [0, 1.57],
-                'anchor_bottom_heights': [-1.78],
-                'align_center': False,
-                'feature_map_stride': 8,
-                'matched_threshold': 0.6,
-                'unmatched_threshold': 0.45
-            },
-            {
-                'class_name': 'Pedestrian',
-                'anchor_sizes': [[0.8, 0.6, 1.73]],
-                'anchor_rotations': [0, 1.57],
-                'anchor_bottom_heights': [-0.6],
-                'align_center': False,
-                'feature_map_stride': 8,
-                'matched_threshold': 0.5,
-                'unmatched_threshold': 0.35
-            },
-            {
-                'class_name': 'Cyclist',
-                'anchor_sizes': [[1.76, 0.6, 1.73]],
-                'anchor_rotations': [0, 1.57],
-                'anchor_bottom_heights': [-0.6],
-                'align_center': False,
-                'feature_map_stride': 8,
-                'matched_threshold': 0.5,
-                'unmatched_threshold': 0.35
-            }
-        ]
+    TARGET_ASSIGNER_CONFIG:
+      NAME: AxisAlignedTargetAssigner
+      POS_FRACTION: -1.0
+      SAMPLE_SIZE: 512
+      NORM_BY_NUM_EXAMPLES: false
+      MATCH_HEIGHT: false
+      BOX_CODER: ResidualCoder
 
-        TARGET_ASSIGNER_CONFIG:
-            NAME: AxisAlignedTargetAssigner
-            POS_FRACTION: -1.0
-            SAMPLE_SIZE: 512
-            NORM_BY_NUM_EXAMPLES: False
-            MATCH_HEIGHT: False
-            BOX_CODER: ResidualCoder
-
-        LOSS_CONFIG:
-            LOSS_WEIGHTS: {
-                'cls_weight': 1.0,
-                'loc_weight': 2.0,
-                'dir_weight': 0.2,
-                'code_weights': [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
-            }
+    LOSS_CONFIG:
+      LOSS_WEIGHTS:
+        cls_weight: 1
+        loc_weight: 2
+        dir_weight: 0.2
+        code_weights: [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
 
     ROI_HEAD:
       NAME: MixedHead
