--- a/tools/cfgs/kitti_models/mixed_head.yaml
+++ b/tools/cfgs/kitti_models/mixed_head.yaml
@@ -83,60 +83,67 @@ MODEL:
         dir_weight: 0.2
         code_weights: [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
 
-    ROI_HEAD:
-      NAME: MixedHead
-      CLASS_AGNOSTIC: True
-      SHARED_FC: [256, 256]
-      CLS_FC: [256, 256]
-      REG_FC: [256, 256]
-      DP_RATIO: 0.3
+  ROI_HEAD:
+    NAME: HopelessHead
+    CLASS_AGNOSTIC: true
 
-      NMS_CONFIG:
-          TRAIN:
-              NMS_TYPE: nms_gpu
-              MULTI_CLASSES_NMS: False
-              NMS_PRE_MAXSIZE: 9000
-              NMS_POST_MAXSIZE: 512
-              NMS_THRESH: 0.8
-          TEST:
-              NMS_TYPE: nms_gpu
-              MULTI_CLASSES_NMS: False
-              NMS_PRE_MAXSIZE: 1024
-              NMS_POST_MAXSIZE: 100
-              NMS_THRESH: 0.7
+    NUM_POINTS: 256
+    ADD_DIS: 0.6
+    SHARED_FC: [256, 256]
+    CLS_FC: [256, 256]
+    REG_FC: [256, 256]
+    DP_RATIO: 0.3
 
-      ROI_GRID_POOL:
-        FEATURES_SOURCE: ['x_conv2', 'x_conv3', 'x_conv4']
+    NMS_CONFIG:
+      TRAIN:
+        NMS_TYPE: nms_gpu
+        MULTI_CLASSES_NMS: false
+        NMS_PRE_MAXSIZE: 9000
+        NMS_POST_MAXSIZE: 512
+        NMS_THRESH: 0.8
+      TEST:
+        NMS_TYPE: nms_gpu
+        MULTI_CLASSES_NMS: false
+        USE_FAST_NMS: false
+        SCORE_THRESH: 0.0
+        NMS_PRE_MAXSIZE: 2048
+        NMS_POST_MAXSIZE: 100
+        NMS_THRESH: 0.7
+
+    ROI_GRID_POOL:
+        FEATURES_SOURCE: [x_conv2, x_conv3, x_conv4]
         PRE_MLP: true
         GRID_SIZE: 6
         VOXEL_POOL_LAYERS:
-          x_conv2:
+            x_conv2:
             MLPS: [[32, 32]]
             QUERY_RANGES: [[4, 4, 4]]
             POOL_RADIUS: [0.4]
             NSAMPLE: [16]
             POOL_METHOD: max_pool
-          x_conv3:
+            x_conv3:
             MLPS: [[32, 32]]
             QUERY_RANGES: [[4, 4, 4]]
             POOL_RADIUS: [0.8]
             NSAMPLE: [16]
             POOL_METHOD: max_pool
-          x_conv4:
+            x_conv4:
             MLPS: [[32, 32]]
             QUERY_RANGES: [[4, 4, 4]]
             POOL_RADIUS: [1.6]
             NSAMPLE: [16]
             POOL_METHOD: max_pool
         POINT_POOL_LAYER:
-          NUM_POINTS: 256
-          ADD_DIS: 0.6
-          NAME: StackSAModuleMSG
-          MLPS: [[32, 32], [32, 32]]
-          POOL_RADIUS: [0.4, 0.8]
-          NSAMPLE: [32, 32]
-        ATTENTION:
-        ENABLED: False
+            NUM_POINTS: 256
+            # ADD_DIS: 0.4
+            NAME: StackSAModuleMSG
+            MLPS: [[32, 32], [32, 32]]
+            POOL_RADIUS: [0.8, 1.6]
+            NSAMPLE: [32, 32]
+            POOL_METHOD: max_pool
+
+    ATTENTION:
+        ENABLED: True
         NUM_FEATURES: 256
         NUM_HEADS: 1
         NUM_HIDDEN_FEATURES: 256
@@ -147,64 +154,65 @@ MODEL:
         COMBINE: True
         MASK_EMPTY_POINTS: True
 
-      TARGET_CONFIG:
-          BOX_CODER: ResidualCoder
-          ROI_PER_IMAGE: 128
-          FG_RATIO: 0.5
+    TARGET_CONFIG:
+      BOX_CODER: ResidualCoder
+      ROI_PER_IMAGE: 128
+      FG_RATIO: 0.5
 
-          SAMPLE_ROI_BY_EACH_CLASS: True
-          CLS_SCORE_TYPE: roi_iou
+      SAMPLE_ROI_BY_EACH_CLASS: true
+      CLS_SCORE_TYPE: roi_iou
 
-          CLS_FG_THRESH: 0.75
-          CLS_BG_THRESH: 0.25
-          CLS_BG_THRESH_LO: 0.1
-          HARD_BG_RATIO: 0.8
+      CLS_FG_THRESH: 0.75
+      CLS_BG_THRESH: 0.25
+      CLS_BG_THRESH_LO: 0.1
+      HARD_BG_RATIO: 0.8
 
-          REG_FG_THRESH: 0.55
+      REG_FG_THRESH: 0.55
 
-      LOSS_CONFIG:
-          CLS_LOSS: BinaryCrossEntropy
-          REG_LOSS: smooth-l1
-          CORNER_LOSS_REGULARIZATION: True
-          LOSS_WEIGHTS: {
-              'rcnn_cls_weight': 1.0,
-              'rcnn_reg_weight': 1.0,
-              'rcnn_corner_weight': 1.0,
-              'code_weights': [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
-          }
+    LOSS_CONFIG:
+      CLS_LOSS: BinaryCrossEntropy
+      REG_LOSS: smooth-l1
+      CORNER_LOSS_REGULARIZATION: true
+      GRID_3D_IOU_LOSS: false
+      LOSS_WEIGHTS:
+        rcnn_cls_weight: 1.0
+        rcnn_reg_weight: 1.0
+        rcnn_corner_weight: 1.0
+        rcnn_iou3d_weight: 1.0
+        code_weights: [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
 
-    POST_PROCESSING:
-        RECALL_THRESH_LIST: [0.3, 0.5, 0.7]
-        SCORE_THRESH: 0.1
-        OUTPUT_RAW_SCORE: False
+  POST_PROCESSING:
+    RECALL_THRESH_LIST: [0.3, 0.5, 0.7]
+    SCORE_THRESH: 0.3
+    OUTPUT_RAW_SCORE: false
 
-        EVAL_METRIC: kitti
+    EVAL_METRIC: kitti
 
-        NMS_CONFIG:
-            MULTI_CLASSES_NMS: False
-            NMS_TYPE: nms_gpu
-            NMS_THRESH: 0.1
-            NMS_PRE_MAXSIZE: 4096
-            NMS_POST_MAXSIZE: 500
+    NMS_CONFIG:
+      MULTI_CLASSES_NMS: false
+      NMS_TYPE: nms_gpu
+      NMS_THRESH: 0.1
+      NMS_PRE_MAXSIZE: 4096
+      NMS_POST_MAXSIZE: 500
 
 
 OPTIMIZATION:
-    BATCH_SIZE_PER_GPU: 2
-    NUM_EPOCHS: 80
+  BATCH_SIZE_PER_GPU: 2
+  NUM_EPOCHS: 80
 
-    OPTIMIZER: adam_onecycle
-    LR: 0.01
-    WEIGHT_DECAY: 0.01
-    MOMENTUM: 0.9
+  OPTIMIZER: adam_onecycle
+  LR: 0.01
+  WEIGHT_DECAY: 0.01
+  MOMENTUM: 0.9
 
-    MOMS: [0.95, 0.85]
-    PCT_START: 0.4
-    DIV_FACTOR: 10
-    DECAY_STEP_LIST: [35, 45]
-    LR_DECAY: 0.1
-    LR_CLIP: 0.0000001
+  MOMS: [0.95, 0.85]
+  PCT_START: 0.4
+  DIV_FACTOR: 10
+  DECAY_STEP_LIST: [35, 45]
+  LR_DECAY: 0.1
+  LR_CLIP: 0.0000001
 
-    LR_WARMUP: False
-    WARMUP_EPOCH: 1
+  LR_WARMUP: false
+  WARMUP_EPOCH: 1
 
-    GRAD_NORM_CLIP: 10
+  GRAD_NORM_CLIP: 10
