--- a/tools/cfgs/kitti_models/second.yaml
+++ b/tools/cfgs/kitti_models/second.yaml
@@ -18,7 +18,7 @@ MODEL:
         NUM_BEV_FEATURES: 256
 
     BACKBONE_2D:
-        NAME: BaseBEVBackbone
+        NAME: SSFA
 
         LAYER_NUMS: [5, 5]
         LAYER_STRIDES: [1, 2]
