--- a/tools/cfgs/kitti_models/second.yaml
+++ b/tools/cfgs/kitti_models/second.yaml
@@ -20,11 +20,42 @@ MODEL:
     BACKBONE_2D:
         NAME: SSFA
 
-        LAYER_NUMS: [5, 5]
-        LAYER_STRIDES: [1, 2]
-        NUM_FILTERS: [128, 256]
-        UPSAMPLE_STRIDES: [1, 2]
-        NUM_UPSAMPLE_FILTERS: [256, 256]
+        NUM_FILTERS: [256, 256, 256]
+        LAYER_STRIDES: [1, 1, 1]
+        KERNEL_SIZES: [3, 3, 3]
+
+        SEG_NUM_FILTERS: [256, 256, 256, 256]
+        SEG_LAYER_STRIDES: [2, 1, 1, 1]
+        SEG_KERNEL_SIZES: [3, 3, 3, 1]
+
+        TRANS_NUM_FILTERS: [256]
+        TRANS_KERNEL_SIZES: [1]
+        TRANS_LAYER_STRIDES: [1]
+
+        DECONV_LAYER_FILTERS_0: [256]
+        DECONV_KERNEL_SIZES_0: [3]
+        DECONV_STRIDES_0: [2]
+
+        DECONV_LAYER_FILTERS_1: [256]
+        DECONV_KERNEL_SIZES_1: [3]
+        DECONV_STRIDES_1: [2]
+
+        CONV_0_LAYER_FILTERS: [256]
+        CONV_0_KERNEL_SIZERS: [3]
+        CONV_0_STRIDES: [1]
+
+        W_0_LAYER_FILTERS: [1]
+        W_0_KERNEL_SIZES: [1]
+        W_0_STRIDES: [1]
+
+        CONV_1_LAYER_FILTERS: [256]
+        CONV_1_KERNEL_SIZERS: [3]
+        CONV_1_STRIDES: [1]
+
+        W_1_LAYER_FILTERS: [1]
+        W_1_KERNEL_SIZES: [1]
+        W_1_STRIDES: [1]
+
 
     DENSE_HEAD:
         NAME: AnchorHeadSingle
