--- a/tools/cfgs/kitti_models/voxel_rcnn_car.yaml
+++ b/tools/cfgs/kitti_models/voxel_rcnn_car.yaml
@@ -77,6 +77,7 @@ MODEL:
       BOX_CODER: ResidualCoder
 
     LOSS_CONFIG:
+      CLS_LOSS_TYPE: PolySigmoidFCLoss
       LOSS_WEIGHTS:
         cls_weight: 1
         loc_weight: 2
@@ -148,7 +149,7 @@ MODEL:
       REG_FG_THRESH: 0.55
 
     LOSS_CONFIG:
-      CLS_LOSS: BinaryCrossEntropy
+      CLS_LOSS: PolyBinaryCrossEntropy
       REG_LOSS: smooth-l1
       CORNER_LOSS_REGULARIZATION: true
       GRID_3D_IOU_LOSS: false
