--- a/tools/cfgs/kitti_models/ia-ssd.yaml
+++ b/tools/cfgs/kitti_models/ia-ssd.yaml
@@ -95,6 +95,7 @@ MODEL:
       CORNER_LOSS_REGULARIZATION: true
       CENTERNESS_REGULARIZATION: true
       CENTERNESS_REGULARIZATION_SA: true
+      IOU3D_REGULARIZATION: true
       LOSS_WEIGHTS:
         ins_aware_weight: [0, 1.0, 1.0]
         vote_weight: 1.0
@@ -103,6 +104,7 @@ MODEL:
         corner_weight: 1.0
         code_weights: [1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
         dir_weight: 0.2
+        iou3d_weight: 1.0
 
   POST_PROCESSING:
     # 'normal'(default), 'detail', 'speed'(no recall info)
