--- a/tools/cfgs/kitti_models/ia-ssd_pure.yaml
+++ b/tools/cfgs/kitti_models/ia-ssd_pure.yaml
@@ -79,7 +79,7 @@ MODEL:
 
         LOSS_CONFIG:
             # Ref: 'WeightedBinaryCrossEntropy', 'WeightedCrossEntropy', 'FocalLoss'
-            LOSS_CLS: PolyWeightedCrossEntropy
+            LOSS_CLS: WeightedCrossEntropy
             LOSS_REG: WeightedSmoothL1Loss
             LOSS_INS: WeightedCrossEntropy
             SAMPLE_METHOD_LIST: *sample_method_list
